Updated code using platform.js
Updated code using platform.js

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 [
   {
-	"name": "url",
-	"label": "URL",
+	"name": "connstring",
+	"label": "Connection String",
 	"type": "String",
 	"required": false
   },
