--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "storage-plugin-seed",
-  "description": "Storage Plugin seed project for the Reekoh IoT Platform. Helps engineers to start developing storage plugins for the Reekoh IoT Platform.",
+  "name": "mongodb-storage",
+  "description": "MongoDB Storage Plugin for Reekoh IoT Platform.",
   "version": "0.0.1",
   "author": "Reekoh, Inc.",
   "main": "app.js",
@@ -9,9 +9,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Reekoh/storage-plugin-seed"
+    "url": "https://github.com/Reekoh/mongodb-storage"
   },
   "dependencies": {
+    "is-json": "^1.2.5",
     "mongodb": "^2.0"
   },
   "devDependencies": {
