Added notifyReady event
The plugin should call the notifyReady event in order to notify the
parent process that initialization is done.

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
 	"name": "connstring",
 	"label": "Connection String",
 	"type": "String",
-	"required": false
+	"required": true
   },
   {
 	"name": "collection",
