--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-cli": "^0.3.0",
     "gulp-jshint": "^1.11.2",
     "gulp-jsonlint": "^1.1.0",
-    "gulp-plumber": "^1.0.1"
+    "gulp-plumber": "^1.0.1",
+    "node-uuid": "^1.4.3"
   }
 }
