--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js:
-  - "4.0"
-  - "0.12"
+  - "4.1.1"
+services:
+  - mongodb
 notifications:
   slack: reekoh:eFsOWQBeXXs9jKVcqiqo4Ifg
