--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   },
   "dependencies": {
     "is-json": "^1.2.5",
-    "mongodb": "^2.0"
+    "mongodb": "^2.0.45"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-cli": "^0.3.0",
     "gulp-jshint": "^1.11.2",
-    "gulp-jsonlint": "^1.1.0",
+    "gulp-jsonlint": "^1.1.1",
+    "gulp-mocha": "^2.1.3",
     "gulp-plumber": "^1.0.1",
     "node-uuid": "^1.4.3"
   }
