--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-jsonlint": "^1.1.1",
     "gulp-mocha": "^2.1.3",
     "gulp-plumber": "^1.0.1",
-    "node-uuid": "^1.4.3"
+    "node-uuid": "^1.4.3",
+    "should": "^7.1.0"
   }
 }
