--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mongodb-storage",
   "description": "MongoDB Storage Plugin for Reekoh IoT Platform.",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "author": "Reekoh, Inc.",
   "main": "app.js",
   "scripts": {
@@ -19,7 +19,7 @@
     "gulp": "^3.9.0",
     "gulp-cli": "^0.3.0",
     "gulp-jshint": "^1.11.2",
-    "gulp-jsonlint": "^1.1.1",
+    "gulp-json-lint": "^0.1.0",
     "gulp-mocha": "^2.1.3",
     "gulp-plumber": "^1.0.1",
     "node-uuid": "^1.4.3",
