--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mongodb-storage",
   "description": "MongoDB Storage Plugin for Reekoh IoT Platform.",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "author": "Reekoh, Inc.",
   "main": "app.js",
   "scripts": {
@@ -12,8 +12,8 @@
     "url": "https://github.com/Reekoh/mongodb-storage"
   },
   "dependencies": {
-    "is-json": "^1.2.5",
-    "mongodb": "^2.0.47"
+    "lodash.isplainobject": "^3.2.0",
+    "mongodb": "^2.0.48"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
@@ -22,7 +22,6 @@
     "gulp-json-lint": "^0.1.0",
     "gulp-mocha": "^2.1.3",
     "gulp-plumber": "^1.0.1",
-    "node-uuid": "^1.4.3",
     "should": "^7.1.0"
   }
 }
