--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mongodb-storage",
   "description": "MongoDB Storage Plugin for Reekoh IoT Platform.",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "author": "Reekoh, Inc.",
   "main": "app.js",
   "scripts": {
@@ -17,11 +17,12 @@
   },
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-cli": "^0.3.0",
-    "gulp-jshint": "^1.11.2",
+    "gulp-cli": "^1.1.0",
+    "gulp-jshint": "^2.0.0",
     "gulp-json-lint": "^0.1.0",
-    "gulp-mocha": "^2.1.3",
+    "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "should": "^7.1.0"
-  }
+  },
+  "license": "LGPL-3.0"
 }
