--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mongodb-storage",
   "description": "MongoDB Storage Plugin for Reekoh IoT Platform.",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "author": "Reekoh, Inc.",
   "main": "app.js",
   "scripts": {
@@ -12,6 +12,8 @@
     "url": "https://github.com/Reekoh/mongodb-storage"
   },
   "dependencies": {
+    "async": "^1.5.2",
+    "lodash.isarray": "^4.0.0",
     "lodash.isplainobject": "^3.2.0",
     "mongodb": "^2.0.48"
   },
@@ -22,6 +24,7 @@
     "gulp-json-lint": "^0.1.0",
     "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.0.1",
+    "jshint": "^2.9.1",
     "should": "^7.1.0"
   },
   "license": "LGPL-3.0"
