--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "mongodb-storage",
+  "version": "1.0.1",
   "description": "MongoDB Storage Plugin for Reekoh IoT Platform.",
-  "version": "1.0.0",
   "author": "Reekoh, Inc.",
+  "license": "LGPL-3.0",
   "main": "app.js",
   "scripts": {
     "test": "gulp test"
@@ -12,19 +13,21 @@
     "url": "https://github.com/Reekoh/mongodb-storage"
   },
   "dependencies": {
-    "async": "^1.5.2",
-    "lodash.isarray": "^4.0.0",
-    "lodash.isplainobject": "^4.0.4",
-    "mongodb": "^2.1.16"
+    "async": "^2.1.4",
+    "demo-reekoh-node": "^1.0.0",
+    "lodash.isplainobject": "^4.0.6",
+    "mongodb": "^2.2.22"
   },
   "devDependencies": {
+    "amqplib": "^0.5.1",
     "gulp": "^3.9.1",
     "gulp-cli": "^1.2.1",
-    "gulp-jshint": "^2.0.0",
+    "gulp-jshint": "^2.0.1",
     "gulp-json-lint": "^0.1.0",
     "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.1.0",
-    "should": "^8.3.1"
-  },
-  "license": "LGPL-3.0"
+    "jshint": "^2.9.4",
+    "mocha": "^2.5.3",
+    "should": "^9.0.2"
+  }
 }
