--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "mongodb-storage",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "MongoDB Storage Plugin for Reekoh IoT Platform.",
   "author": "Reekoh, Inc.",
-  "license": "LGPL-3.0",
+  "license": "GPL-3.0",
   "main": "app.js",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp lint"
   },
   "repository": {
     "type": "git",
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "async": "^2.1.4",
-    "demo-reekoh-node": "^1.0.0",
     "lodash.isplainobject": "^4.0.6",
-    "mongodb": "^2.2.22"
+    "mongodb": "^2.2.22",
+    "reekoh": "^1.0.0"
   },
   "devDependencies": {
     "amqplib": "^0.5.1",
@@ -26,6 +26,7 @@
     "gulp-json-lint": "^0.1.0",
     "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-standard": "^8.0.4",
     "jshint": "^2.9.4",
     "mocha": "^2.5.3",
     "should": "^9.0.2"
