--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "url": "https://github.com/Reekoh/mongodb-storage"
   },
   "dependencies": {
-    "async": "^2.1.4",
-    "lodash.isplainobject": "^4.0.6",
-    "mongodb": "^2.2.22",
-    "reekoh": "^1.0.0"
+    "async": "=2.1.4",
+    "lodash.isplainobject": "=4.0.6",
+    "mongodb": "=2.2.22",
+    "reekoh": "=1.0.2"
   },
   "devDependencies": {
-    "amqplib": "^0.5.1",
-    "gulp": "^3.9.1",
-    "gulp-cli": "^1.2.1",
-    "gulp-jshint": "^2.0.1",
-    "gulp-json-lint": "^0.1.0",
-    "gulp-mocha": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-standard": "^8.0.4",
-    "jshint": "^2.9.4",
-    "mocha": "^2.5.3",
-    "should": "^9.0.2"
+    "amqplib": "=0.5.1",
+    "gulp": "=3.9.1",
+    "gulp-cli": "=1.2.1",
+    "gulp-jshint": "=2.0.1",
+    "gulp-json-lint": "=0.1.0",
+    "gulp-mocha": "=2.2.0",
+    "gulp-plumber": "=1.1.0",
+    "gulp-standard": "=8.0.4",
+    "jshint": "=2.9.4",
+    "mocha": "=2.5.3",
+    "should": "=9.0.2"
   }
 }
